fixing bag connected with gap on about page

--- a/frontend/src/components/AboutPanel/AboutPanel.module.scss
+++ b/frontend/src/components/AboutPanel/AboutPanel.module.scss
@@ -3,7 +3,6 @@
   height: 294px;
   display: flex;
   padding: 16px 258px 49px 258px;
-  justify-content: space-between;
   align-items: center;
   gap: 12px;
   margin-bottom: 120px;
