--- a/frontend/src/components/AboutText/AboutText.module.scss
+++ b/frontend/src/components/AboutText/AboutText.module.scss
@@ -3,7 +3,7 @@
   height: 294px;
   display: flex;
   padding: 16px 258px 49px 258px;
-  justify-content: space-between;
+  // justify-content: space-between;
   align-items: center;
   gap: 106px;
   margin: 56px 0 120px 0;
